--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,12 +2,49 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    background-color: $black-color;
+    .container{
+        width: 960px;
+        margin: 0 auto;
+    }
+
+    #logo{
+        padding-left: 10px;
+        padding-right: 10px;
+        display: table-cell;
+        vertical-align: middle;
+        height: 4em;
+        padding: 1em;
+        position: relative;
+        h1 a{
+            display: inline-block;
+            img{
+                max-height: 3em;
+            }
+        }   
+    }
 
     // Positioning context for the mobile navigation icon
     position: relative;
+
+    #menu{
+        text-align: right;
+        padding-right: 10px;
+        li{
+            display: inline-block;
+
+            a{
+                padding: 0.75em 1.5 em;
+                color: #fff;
+                text-decoration: none;
+                    -webkit-transition: all 0.2s ease;
+                    -moz-transition: all 0.2s ease;
+                    -ms-transition: all 0.2s ease;
+                    -o-transition: all 0.2s ease;
+                    transition: all 0.2s ease;
+            }
+        }
+    }
 }
 
 .site-title {
@@ -98,68 +135,21 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
-}
+    border-top: 20px solid black;
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
-
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-}
-
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
+    img{
+        width: 20%;
+        float: left;
     }
 
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+    p{
+        padding: 0 0 30px 30px ;
+        width: 70%;
+        float: left;
     }
-}
 
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
+
 }
 
 
