--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,35 @@
 <header class="site-header">
+  <div class="container">
+    <div class="wrapperhead">
+        <div id="logo">
+          <h1>
+            <a href="{{ site.baseurl }}/" rel="home">
+                <img src="{{ "/assets/img/responsibledata.png" | prepend: site.baseurl }}" width="268" height="80" alt="Responsible Data Forum" />
+            </a>
+          </h1>
+          <!--<span id="menuswitch" class="icon-arrow-down"></span>-->
 
-  <div class="wrapper">
+        </div>
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <nav id="menu" class="indicators ">
+          <ul>
+            <li id="menu-item-139" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-7 current_page_item menu-item-139"><a href="https://responsibledata.io/">Home</a></li>
+            <li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153"><a href="https://responsibledata.io/about/">About</a></li>
+            <li id="menu-item-204" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-204"><a href="https://responsibledata.io/events/">Events</a></li>
+            <li id="menu-item-921" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-921"><a href="https://responsibledata.io/blog/">Blog</a></li>
+            <li id="menu-item-768" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-768"><a href="https://responsibledata.io/category/resources/">Resources</a></li>
+            </ul>       
+        
+        </nav>
+        
+        <div class="clear"></div>
 
+
+
+
+
+
+<!--
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -20,7 +46,9 @@
           {% endif %}
         {% endfor %}
       </div>
-    </nav>
+    </nav> -->
+
+  </div>
 
   </div>
 
