--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
   {% include head.html %}
 
   <body>
-
     {% include header.html %}
+  
+  <div class="container">
 
     <div class="page-content">
       <div class="wrapper">
@@ -15,6 +16,7 @@
 
     {% include footer.html %}
 
+  </div>
   </body>
 
 </html>
