--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,8 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
-$grey-color:       #828282;
+$black-color: 	   #1B1E1F;
+$grey-color:       #1B1E1F;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
