--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,88 +47,104 @@
     }
 }
 
-.site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
 
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
+/* header */
+#header { background-color: #1B1E1F; color: #fff; position: relative; z-index: 3; display: block; }
+#header #logo { padding: 1em; position: relative; }
+#header #logo h1 { margin-bottom: 0; margin-right: 1.25em; }
+#header #logo h1 a { display: inline-block; color: #fff; text-decoration: none; }
+#header #logo h1 a img { max-height: 3em; }
+#header #menu { display: none; }
+#header #menu ul { list-style: none; }
+#header #menu ul, #header #menu li { margin: 0; }
+#header #menu li a { padding: 1em 1em; color: #fff; text-decoration: none; }
+#header #menu ul li.current_page_item > a { color: #2ba8bd; }
+#header #menu .mini-menu-cart strong { font-weight: 400; }
+#header #menu.mobile { display: block; }
+#header #menu.mobile li { border-top: 1px solid #333; }
+#header #menu.mobile li a { display: block; font-size: 1.2em; }
+#header #menu.mobile li li a { padding-left: 2em; }
+#header #menu.mobile li li li a { padding-left: 3em; }
+#header #menu.mobile .mini-menu-cart em { display: none; }
+#header #menu.mobile .mini-menu-cart strong:before { font-weight: 400; content: '\00a0\2014\00a0'; }
+#header #menu.mobile .mini-menu-cart ul { display: none; }
+#header #menu .menu-item-language img.iclflag { position: relative; top: -0.1em; }
+#header #menu-switch { position: absolute; top: 50%; right: 0; width: 5em; height: 6em; margin-top: -3em; cursor: pointer; text-align: center; display: table; }
+#header #menu-switch:before { text-align: center; font-size: 1.5em; display: table-cell; vertical-align: middle; }
+#header #menu-switch:before { text-align: center; font-size: 1.5em; display: table-cell; vertical-align: middle; -webkit-transition: transform 0.3s ease; -moz-transition: transform 0.3s ease; -ms-transition: transform 0.3s ease; -o-transition: transform 0.3s ease; transition: transform 0.3s ease; }
+#header #menu-switch.on:before { -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); }
+
+
+#heading { position: relative; z-index: 2; }
+#heading .bar, .thumb .bar { position: absolute; left: 0; bottom: -1px; width: 100%; height: 0.5em; z-index: 98; }
+#heading .bar:before, #heading .bar:after, .thumb .bar:before, .thumb .bar:after { content:''; position: absolute; top: 0; width: 50%; height: 0; border-bottom: 0.5em solid #fff; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; }
+#heading .bar:before, .thumb .bar:before { left: 0; border-right: 0.5em solid rgba(0, 0, 0, 0); }
+#heading .bar:after, .thumb .bar:after { right: 0; border-left: 0.5em solid rgba(0, 0, 0, 0); }
+.thumb .bar:before, .thumb .bar:after { border-bottom-color: #f4f4f4; }
+.invert-colors .thumb .bar:before, .invert-colors .thumb .bar:after, .thumb .bar.white:before, .thumb .bar.white:after { border-bottom-color: #fff; }
+
+#header.current a{
+    color:#ff0200;
 }
 
-.site-nav {
-    float: right;
-    line-height: 56px;
-
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
-
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
-    }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
-            }
-            margin-left: 20px;
-        }
-    }
+#header li a{
+    text-transform: uppercase;
+    font-family: "Montserrat" ;
 }
 
+@media (min-width: 768px) {
+    #header .wrapper { display: table; width: 100%; }
+    #header #logo, #header #menu { display: table-cell; vertical-align: middle; height: 4em; }
+    #header #logo { padding-left: 10px; padding-right: 10px; }
+    #header #logo h1 { margin-right: 0; }
+    #header #menu { text-align: right; padding-right: 10px; -ms-touch-action: none; }
+    #header #menu li { display: inline-block; }
+    #header #menu li a { display: inline-block; padding: 0.5em 1em; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
+    .no-touch #header #menu li a:hover { background-color: #090909; }
+    #header #menu li.menu-item-has-children, #header #menu li.page_item_has_children, #header #menu li.menu-item-language, #header #menu li.mini-menu-cart { position: relative; }
+    #header #menu li.menu-item-has-children ul, #header #menu li.page_item_has_children ul, #header #menu li.menu-item-language ul.submenu-languages, #header #menu li.mini-menu-cart ul { visibility: hidden; position: absolute; top: 100%; left: 0; z-index: 99; width: 12em; text-align: left; background-color: #090909; opacity: 0; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -ms-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
+    #header #menu li.menu-item-has-children.left-side ul, #header #menu li.menu-item-language ul.submenu-languages, #header #menu li.mini-menu-cart ul { left: auto; right: 0; text-align: right; }
+    #header #menu li.menu-item-has-children li ul, #header #menu li.page_item_has_children li ul { top: 0; left: 99.99%; }
+    #header #menu.indicators li.menu-item-has-children > a:after, #header #menu.indicators li.page_item_has_children > a:after { content: '\00a0\002B'; font-family: 'Arial'; }
+    #header #menu li.menu-item-has-children ul li, #header #menu li.page_item_has_children ul li, #header #menu li.menu-item-language ul.submenu-languages li, #header #menu li.mini-menu-cart ul li { display: block; font-size: 0.9em; }
+    #header #menu li.menu-item-has-children ul a, #header #menu li.page_item_has_children ul a, #header #menu li.menu-item-language ul.submenu-languages a, #header #menu li.mini-menu-cart ul a { display: block; padding: 0.5em 1.25em; margin-left: 0; }
+    .no-touch #header #menu li.menu-item-has-children ul a:hover, #header #menu li.menu-item-has-children li.hover > a, .no-touch #header #menu li.page_item_has_children ul a:hover, #header #menu li.page_item_has_children li.hover > a, .no-touch #header #menu li.menu-item-language ul.submenu-languages a:hover, #header #menu li.menu-item-language.hover ul.submenu-languages > a, .no-touch #header #menu li.mini-menu-cart ul a:hover { color: #999; }
+    #header #menu li.menu-item-has-children ul li:last-child a, #header #menu li.page_item_has_children ul li:last-child a, #header #menu li.menu-item-language ul.submenu-languages li:last-child a { padding-bottom: 1em; }
+    .no-touch #header #menu li.menu-item-has-children:hover a, #header #menu li.menu-item-has-children.hover a, .no-touch #header #menu li.page_item_has_children:hover a, #header #menu li.page_item_has_children.hover a, .no-touch #header #menu li.menu-item-language:hover a, #header #menu li.menu-item-language.hover a, .no-touch #header #menu li.mini-menu-cart:hover a { background-color: #090909; color: #ddd; }
+    .no-touch #header #menu li.menu-item-has-children:hover ul li.current_page_item > a, #header #menu li.menu-item-has-children.hover ul li.current_page_item > a, .no-touch #header #menu li.page_item_has_children:hover ul li.current_page_item > a, #header #menu li.page_item_has_children.hover ul li.current_page_item > a { color: #2ba8bd; }
+    .no-touch #header #menu li.menu-item-has-children:hover > ul, #header #menu li.menu-item-has-children.hover > ul, .no-touch #header #menu li.page_item_has_children:hover > ul, #header #menu li.page_item_has_children.hover > ul, .no-touch #header #menu li.menu-item-language:hover > ul.submenu-languages, #header #menu li.menu-item-language.hover > ul.submenu-languages, .no-touch #header #menu li.mini-menu-cart:hover > ul { visibility: visible; opacity: 1; }
+    #header #menu .mini-menu-cart a { background-color: #2ba8bd; padding-left: 1em; padding-right: 1em; }
+    #header #menu li.mini-menu-cart > a:after { display: none; }
+    #header #menu ul .mini-menu-cart.current_page_item > a { color: #fff; }
+    #header #menu .mini-menu-cart em { position: relative; top: 0.04em; }
+    #header #menu .mini-menu-cart span.mobile-only { display: none; }
+    #header #menu li.mini-menu-cart ul { width: 13em; }
+    #header #menu li.mini-menu-cart ul a { background-color: #090909; padding: 0.5em 1em 0.5em 0.5em; line-height: 4em; }
+    #header #menu li.mini-menu-cart ul li:last-child a { padding-bottom: 0.5em; }
+    #header #menu li.mini-menu-cart ul li span.icon-cross { margin: 0 0.25em; font-size: 0.8em; }
+    #header #menu li.mini-menu-cart ul li span.equals { margin: 0 0.25em; }
+    .no-touch #header #menu li.mini-menu-cart ul li.checkout-link a { margin: 0 0.5em 0.5em; text-align: center; padding: 0.2em; line-height: 3em; background-color: #292929; }
+    .no-touch #header #menu li.mini-menu-cart ul li.checkout-link a:hover { background-color: #2ba8bd; color: #fff; }
+    #header #menu li.mini-menu-cart ul a img { float: left; height: 4em; }
+    #header #menu-switch { display: none; }
+
+    #heading .bar { height: 1em; }
+    #heading .bar:before, #heading .bar:after { border-bottom-width: 1em; }
+    #heading .bar:before { border-right-width: 1em; }
+    #heading .bar:after { border-left-width: 1em; }
+    #heading .cerchez-slider .slider .item .caption { bottom: 1em; }
+    #heading .cerchez-slider .slider .item .caption span.text:after { border-left-width: 1em; border-right-width: 1em; border-top-width: 1em; bottom: -0.95em; margin-left: -1em; }
+}
+
+@media (min-width: 1024px) {
+    #header #menu li a { padding: 0.75em 1.5em; }
+    #header #menu li.menu-item-has-children ul a, #header #menu li.page_item_has_children ul a { padding: 0.6em 1.5em; }
+    #header #menu li.menu-item-has-children ul li:last-child a, #header #menu li.page_item_has_children ul li:last-child a { padding-bottom: 1.5em; }
+    #header #menu li.mini-menu-cart ul a { padding: 0.75em 1.25em 0.75em 0.75em ; }
+    #header #menu li.mini-menu-cart ul li:last-child a { padding-bottom: 0.75em; }
+
+    #heading .cerchez-slider .slider .item .caption span.text { font-size: 1.5em; }
+}
 
 
 /**
