Structure of header menu complete, styling to come. Work on the-engine-room/responsible-data-handbook#3

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <img src="{{ "/assets/img/responsibledata.png" | prepend: site.baseurl }}" width="268" height="80" alt="Responsible Data Forum" />
             </a>
           </h1>
-          <!--<span id="menuswitch" class="icon-arrow-down"></span>-->
+         <span id="menuswitch" class="icon-arrow-down"></span>
 
         </div>
 
