--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,9 @@
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+  	<script src="{{ "/assets/js/jquery-1.12.2.min.js" | prepend: site.baseurl }}"></script>
+  	<script src="{{ "/assets/js/isotope.min.js" | prepend: site.baseurl }}"></script>
+  	<script src="{{ "/assets/js/application.js" | prepend: site.baseurl }}"></script>
+
+
 </head>
