--- a/_includes/browsechapters.html
+++ b/_includes/browsechapters.html
@@ -1,8 +1,16 @@
 <div class="row">
-	<h5 class="browse">Browse Other Chapters</h5>
+	<div class="col-md-1"></div>
+	<div class="col-md-10">
+		<h5 class="browse">Browse Other Chapters</h5>
+	</div>
+	<div class="col-md-1"></div>
 </div>
 
 <div class="row">
+	<div class="col-md-1"></div>
+	
+	<div class="col-md-10">
+
 	{% assign posts = site.posts | sort: "num" %}
 	{% for post in posts %}
 		{% if post.title != page.title %}
@@ -11,5 +19,10 @@
 			</a>
 		{% endif %}
 	{% endfor %}
+
+	</div>
+
+	<div class="col-md-1"></div>
+
 
 </div>
