--- a/_includes/isotope.html
+++ b/_includes/isotope.html
@@ -1,30 +1,38 @@
-<div class="row filter-group">
+<div class="row">
+	<div class="col-md-1"></div>
+
+	<div class="col-md-10 filter-group">
 
       <ul classs="options">
         <li data-filter="*" class="displayoption">
           All
         </li>
-
+        /
         <li data-filter=".bookall, .slideall" class="displayoption">
           Full book and slide deck 
         </li>
-
+        /
         <li data-filter=".slide" class="displayoption">
-          Single Slides
+          Single Slides 
         </li>
-
+        /
         <li data-filter=".chapter" class="displayoption">
           Single Chapters
         </li>
 
       </ul>
+     </div>
+
+     <div class="col-md-1"></div>
 
 </div>
 
 
 <div class="row">
 
-	<div class="grid">
+	<div class="col-sm-1"></div>
+
+	<div class="grid col-md-10">
 		<div class="bookall grid-item">
 
 			<img src="{{ "/assets/img/chapter-0.png" | prepend: site.baseurl }}" />
@@ -36,7 +44,7 @@
 		<div class="slideall slide grid-item">
 
 			<img src="{{ "/assets/img/chapter-0.png" | prepend: site.baseurl }}" />
-			<a href="{{ "/assets/slides/responsible-data-handbook.odt" | prepend: site.baseurl }}" target="_blank"><h6>download</h6></a>
+			<a href="{{ "/assets/slides/responsible-data-handbook.odp" | prepend: site.baseurl }}" target="_blank"><h6>download</h6></a>
 
 		</div>
 
@@ -60,7 +68,7 @@
 
 		<div class="slide grid-item">
 		 
-		 <a href="{{ "/assets/slides/" | prepend: site.baseurl }}{{ p.asset-link }}.odt" target="_blank">
+		 <a href="{{ "/assets/slides/" | prepend: site.baseurl }}{{ p.asset-link }}.odp" target="_blank">
 
 		  <img class="img" title="{{ p.title }}" src="{{ "/assets/img/chapter-" | prepend: site.baseurl }}{{ p.num }}.png"/>
 
@@ -69,8 +77,11 @@
 		</div>
 
 
+
 		{% endfor %}
 
 	</div>
+
+	<div class="col-sm-1"></div>
 
 </div>
