--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,21 +9,24 @@
   <body>
     {% include header.html %}
   
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="page-content">
 
 
       {% if page.layout == "post" %}
         <div class="row">
+            <div class="col-md-1"></div>
 
             <div class="col-md-3">
               {% include sidemenu.html %}
             </div>
 
-            <div class="col-md-9">
+            <div class="col-md-7">
                 {{ content }}
             </div>
+
+            <div class="col-md-1"></div>
         </div>
 
         {% include browsechapters.html %}
