--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,6 +18,7 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
+$red-color:        #cd1619;
 $black-color: 	   #1B1E1F;
 $grey-color:       #1B1E1F;
 $grey-color-light: lighten($grey-color, 40%);
