--- a/_includes/isotope.html
+++ b/_includes/isotope.html
@@ -4,7 +4,7 @@
 	<div class="col-md-10 filter-group">
 
       <ul classs="options">
-        <li data-filter="*" class="displayoption">
+        <li data-filter="*" class="displayoption active">
           All
         </li>
         /
@@ -30,7 +30,7 @@
 
 <div class="row">
 
-	<div class="col-sm-1"></div>
+	<div class="col-md-1"></div>
 
 	<div class="grid col-md-10">
 		<div class="bookall grid-item">
@@ -82,6 +82,6 @@
 
 	</div>
 
-	<div class="col-sm-1"></div>
+	<div class="col-md-1"></div>
 
 </div>
