--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,10 +3,15 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+/*FONTS from css/font/stylesheet.css */
+$base-font-family: "latolight", Helvetica, Arial, sans-serif;
+$bold-font-family: "gentium_basicbold", Arial, sans-serif;
+$title-font-family: "alegreyabold", Times, serif; 
+$menu-font-family: "montserratregular", Times, serif; 
+$fancy-font-family: "trattatelloregular", Times, serif; 
+
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -49,6 +54,7 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+		"bootstrap",
         "base",
         "layout",
         "syntax-highlighting"
