--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+/*FONTS from css/font/stylesheet.css */
 /*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -449,7 +450,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #ee
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
 
 /** Basic styling */
-body { font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; color: #111; background-color: #fdfdfd; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; }
+body { font: 400 16px/1.5 "latolight", Helvetica, Arial, sans-serif; color: #111; background-color: #fdfdfd; -webkit-text-size-adjust: 100%; -webkit-font-feature-settings: "kern" 1; -moz-font-feature-settings: "kern" 1; -o-font-feature-settings: "kern" 1; font-feature-settings: "kern" 1; font-kerning: normal; }
 
 /** Set `margin-bottom` to maintain vertical rhythm */
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure, .highlight { margin-bottom: 15px; }
@@ -497,6 +498,15 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 /** Icons */
 .icon > svg { display: inline-block; width: 16px; height: 16px; vertical-align: middle; }
 .icon > svg path { fill: #1B1E1F; }
+
+/** Fonts on persistent elements **/
+h2, .contentnav a, h5, .filter-group li, h6 { font-family: "gentium_basicbold", Arial, sans-serif; }
+
+h1, .index h5, .download h6, .post-header h3 { font-family: "alegreyabold", Times, serif; }
+
+.wrapperhead li a { font-family: "montserratregular", Times, serif; }
+
+p strong { font-family: "trattatelloregular", Times, serif; }
 
 /** Site header */
 .site-header { background-color: #1B1E1F; position: relative; }
@@ -573,7 +583,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 #header.current a { color: #ff0200; }
 
-#header li a { text-transform: uppercase; font-family: "Montserrat"; }
+#header li a { text-transform: uppercase; }
 
 @media (min-width: 768px) { #header .wrapper { display: table; width: 100%; }
   #header #logo, #header #menu { display: table-cell; vertical-align: middle; height: 4em; }
@@ -624,11 +634,16 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 /** Side menu
 */
 #sidemenu .title img { width: 220px; }
-#sidemenu .index { margin: 20px 40px 20px 0; padding: 30px; border: 1px solid; }
-#sidemenu .download { margin: 20px 40px 20px 0; padding: 30px; border: 1px solid; }
+#sidemenu .index { margin: 20px 40px 20px 0; padding: 30px; border: 1px solid #cd1619; }
+#sidemenu .index a:hover { text-decoration: none; }
+#sidemenu .index h5 { color: #cd1619; }
+#sidemenu .download { margin: 20px 40px 20px 0; padding: 30px; border: 1px solid #cd1619; }
+#sidemenu .download h6 { color: #cd1619; text-transform: uppercase; }
+#sidemenu .download a:hover { text-decoration: none; }
 #sidemenu .contentnav { height: 600px; }
 #sidemenu .contentnav ul { width: 60%; float: left; padding: 0; margin: 0; }
 #sidemenu .contentnav ul li { list-style-type: none; padding-left: 0; }
+#sidemenu .contentnav ul li a { font-variant: small-caps; color: #1B1E1F; }
 #sidemenu .contentnav .curls { position: absolute; left: 200px; z-index: 1000; margin: 0; }
 
 /** Site footer */
@@ -644,26 +659,30 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 .post-list { margin-left: 0; list-style: none; }
 .post-list > li { margin-bottom: 30px; }
 
-.post-meta { font-size: 14px; color: #1B1E1F; }
-
 .post-link { display: block; font-size: 24px; }
 
 /** Posts */
 .post-header { margin-bottom: 30px; }
+.post-header h3 { color: #cd1619; text-transform: uppercase; font-size: 40px; text-align: center; }
 
-.post-title { font-size: 42px; letter-spacing: -1px; line-height: 1; }
-@media screen and (max-width: 800px) { .post-title { font-size: 36px; } }
+.post-title { font-size: 80px; letter-spacing: -1px; line-height: 1; color: #cd1619; text-align: center; text-transform: uppercase; }
+@media screen and (max-width: 800px) { .post-title { font-size: 40px; } }
 
 .post-content { margin-bottom: 30px; }
-.post-content h2 { font-size: 32px; }
+.post-content h2 { font-size: 32px; color: #cd1619; font-variant: small-caps; }
 @media screen and (max-width: 800px) { .post-content h2 { font-size: 28px; } }
 .post-content h3 { font-size: 26px; }
 @media screen and (max-width: 800px) { .post-content h3 { font-size: 22px; } }
 .post-content h4 { font-size: 20px; }
 @media screen and (max-width: 800px) { .post-content h4 { font-size: 18px; } }
+.post-content p strong { color: #cd1619; }
+.post-content p a { color: #cd1619; text-decoration: none; }
+.post-content p a:hover { text-decoration: none; }
 
 /** Browse Chapters at bottom of posts
 **/
+h5.browse { margin: 0 10px 20px 10px; padding: 10px 0 10px 0; text-transform: uppercase; border-bottom: 3px solid #cd1619; }
+
 a.browselink:hover { text-decoration: none; }
 
 img.chapterthumb, .thumb img { max-width: 150px; padding: 10px; }
@@ -671,17 +690,26 @@ img.chapterthumb, .thumb img { max-width: 150px; padding: 10px; }
 /**
 * Index 
 **/
+/* title */
+.homehead .title { margin: 10px 0 50px 0; }
+
 /* Full download */
+.fullbook p strong { color: #cd1619; }
+.fullbook h5 { color: #cd1619; }
 .fullbook .link { float: left; height: 220px; padding: 5px 10px 0 0; }
 .fullbook .content .chapterthumb { float: left; }
 .fullbook .content .chapterthumb img { float: left; }
 .fullbook .content a:hover { text-decoration: none; }
 
-.filter-group ul li { cursor: pointer; }
+.filter-group ul { margin: 30px 0 0 0; padding: 20px 0; border-bottom: 3px solid #1B1E1F; }
+.filter-group ul li { display: inline-block; list-style-type: none; cursor: pointer; }
+.filter-group ul li:hover { color: #cd1619; }
+.filter-group .active { color: #cd1619; }
 
-.grid { width: 85%; margin: 0 auto; }
-.grid .grid-item { width: 30%; height: 400px; padding: 30px; }
-.grid .grid-item img { max-height: 350px; padding: 10px; }
+.grid .grid-item { width: 30%; height: 450px; padding: 5px 10px 30px 10px; margin: 0 10px; }
+.grid .grid-item img { max-height: 400px; padding: 10px 0; }
+.grid .grid-item a { text-transform: uppercase; color: #1B1E1F; }
+.grid .grid-item a:hover { color: #cd1619; text-decoration: none; }
 
 /** Syntax highlighting styles */
 .highlight { background: #fff; }
