Work on the-engine-room/responsible-data-handbook#14 and the-engine-room/responsible-data-handbook#15. Nearly finishing the-engine-room/responsible-data-handbook#6

--- a/_includes/isotope.html
+++ b/_includes/isotope.html
@@ -9,7 +9,7 @@
         </li>
         /
         <li data-filter=".bookall, .slideall" class="displayoption">
-          Full book and slide deck 
+          Full book & Full slide deck 
         </li>
         /
         <li data-filter=".slide" class="displayoption">
