--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -206,7 +206,7 @@ pre {
 }
 
 /** Fonts on persistent elements **/
-h2, .contentnav a,h5, .filter-group li, h6{
+h2, .contentnav li a, h5, .filter-group li, h6{
     font-family: $bold-font-family;
 }
 
@@ -218,7 +218,7 @@ h1, .index h5, .download h6, .post-header h3{
     font-family: $menu-font-family;
 }
 
-p strong{
+p strong, .chnum{
     font-family: $fancy-font-family;
 }
 
