--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,8 +34,7 @@ $content-width:    800px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-
-
+$on-large-laptop:  1200px;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
