--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
         <div class="row">
             <div class="col-md-1"></div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 col-sm-4">
               {% include sidemenu.html %}
             </div>
 
-            <div class="col-md-7">
+            <div class="col-md-7 col-sm-8">
                 {{ content }}
             </div>
 
